src/test/resources/repos/invalid-binary-desc-subjects/daa/b38/aaf/daab38aaf09161bfb363c09076024a4d0a981173c39d03d3c77ab2f2f62e6414/v3/inventory.json.sha512
eed287bc54d2f00de2158138cc4c5231aac03b9ce8adc7de4bb65fef41192e1729cdc42918520c93bf80396e9e0a069e4b843a45efd5d8a26032fdb21456cc59	inventory.json